<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    android:id="@+id/fra_add_lay_main">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fra_add_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fra_add_phaneton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phanteon"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/role"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/fra_add_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/role">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/type"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/fra_add_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/type">
            </Spinner>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/fra_add_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:text="@string/add_new" />

    </LinearLayout>

</LinearLayout>